# pkatt

./: Cargo.toml  README.adoc  prompt
pkatt/: Cargo.toml
pkatt-agent/: Cargo.toml
pkatt-agent/src/: identity.rs  lib.rs  prompt.rs
pkatt/src/: lib.rs
src/: lib.rs  main.rs  prompt.rs
