[package]
name = "polkit-agent-thing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
color-eyre = "0.6.3"
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.202", features = ["derive"] }
smol = "2.0.0"
zbus = "4.2.1"
zbus_polkit = "4.0.0"
