[package]
name = "pkatt-agent"
version = "0.1.0"
edition = "2021"
description = "Simple polkit agent in rust"

[dependencies]
anyhow = "1"
color-eyre = "0.6.3"
env_logger = "0.11.3"
log = "0.4.21"
nix = { version = "0.29", default-features = false, features = ["user"] }
pam = "0.8.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.134"
smol = "2.0.0"
uzers = "0.12"
zbus = "5.2"
zbus_polkit = "5.0"

[[bin]]
name = "pkatt"
path = "src/bin/agent.rs"

[[bin]]
name = "pkatt-responder"
path = "src/bin/responder.rs"
